--- a/code/app/templates/agency.html
+++ b/code/app/templates/agency.html
@@ -9,6 +9,11 @@
 <br><br>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+        
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/agency.css') }}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
         <script type="text/javascript">
             function respondRequest(requestId, status) {
@@ -19,21 +24,41 @@
         </script>
     </head>
     <body>
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap.min.js"></script><br><br>
+        <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
+        
+                  <div class="container">
+                <center>
+            <div class="row" style = 'width:100%; height:20%'>
+                <div class="col-md-8">
+                    <div class="card-body"><br><br>
+                        <h1 class = 'display-4' style="font-family:Lato;font-weight:400;color:#094d41;text-align:left">Welcome {{username|title}},</h1><br><br>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="{{ url_for('static', filename='med-chars.png') }}" height="100%" class="card-img-right"><br>
+                </div>
+                <div class="col-sm-12">
+                    <div style='border-bottom:1px solid #ccc;'></div>
+                </div>
+            </div>
+                </center></div>
+        
         <center>
         <div class="container">
-            <br>
-            <div class="header">
-                <h3 class="agency-head" style="font-family:arial;color:#094d41"><b>Requests for: {{username|title}}</b></h3>
-            </div>
             <br>
             <br>
             <ul class="nav nav-tabs" id="status" role="tablist">
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="requests-tab" data-bs-toggle="tab" data-bs-target="#requests"
+                  <button class="nav-link active" id="requests-tab" style = 'color:#25787a' data-bs-toggle="tab" data-bs-target="#requests"
                     type="button" role="tab" aria-controls="requests" aria-selected="true">Requests</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="accepted-tab" data-bs-toggle="tab" data-bs-target="#accepted" type="button"
+                  <button class="nav-link" id="accepted-tab" data-bs-toggle="tab" style = 'color:#25787a' data-bs-target="#accepted" type="button"
                     role="tab" aria-controls="accepted" aria-selected="false">Accepted</button>
                 </li>
             </ul>
@@ -43,12 +68,14 @@
                     <form method="POST">
                         <div class="row">
                             <div class="container col-md-12 compare-table">
-                                <table class="table table-hover">
+                                <br>
+                <table id="myTable1" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
                                     <thead>
                                         <tr>
                                             {% for col_name in table_keys %}
                                                 <th scope="col">{{col_name}}</th>
                                             {% endfor %}
+                                            <th></th><th></th><th></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -57,11 +84,14 @@
                                                 {% for k in table_keys %}
                                                     <td class="align-middle">{{patient[k]}}</td>
                                                 {% endfor %}
-                                                <td class="align-middle" width="5%"><button type="button" class="btn btn-success" onclick="respondRequest({{patient['request_id']}}, 'C');return false;">
+                            <td width="5%"><button type="button" class="btn-two green rounded small" onclick="respondRequest({{patient['request_id']}}, 'C');return false;">
                                                     Confirm
                                                 </button></td>
-                                                <td class="align-middle" width="5%"><button type="button" class="btn btn-warning" onclick="respondRequest({{patient['request_id']}}, 'D');return false;">
+                            <td width="5%"><button type="button" class="btn-two red rounded small" onclick="respondRequest({{patient['request_id']}}, 'D');return false;">
                                                     Deny
+                                                </button></td>
+                                                <td width="5%"><button type="button" class="btn-two blue rounded small">
+                                                    View
                                                 </button></td>
                                             </tr>
                                         {% endfor %}
@@ -76,7 +106,7 @@
                     <form method="POST">
                         <div class="row">
                             <div class="container col-md-12 compare-table">
-                                <table class="table table-hover">
+                <table id="myTable2" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
                                     <thead>
                                         <tr>
                                             {% for col_name in table_keys %}
@@ -99,7 +129,25 @@
                     </div>
                 </div>
             </div>
-        </div>
+            </div></center>
+    <link href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css" rel="stylesheet">
     </body>
+<script>
+    $('.display').DataTable({
+      responsive: false,
+        "bPaginate": false,
+        "bLengthChange": false,
+        "bFilter": true,
+        "bInfo": false,
+        columnDefs: [
+           { orderable: false, targets: [-1, -2, -3]}
+        ]
+        });
+        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+          $($.fn.dataTable.tables(true)).DataTable().columns.adjust().responsive.recalc();
+        });    
+
+</script>
 </html>
 {% endblock %}
