Add ga tracking to discharge page

--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -1,4 +1,10 @@
 {% extends "headerbase.html" %}
+
+{% block head %}
+{{ super() }}
+{% include "ga.html" %}
+{% endblock %}
+
 {% block content %}
 <html>
     <head>
